Resolves tdf#155200 - Don't scale overlay images in start center

Thumbnails don't change their size so overlay must not too

Change-Id: I83ff2bb60ec619686b583180ebabe194c4a77b23
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152193
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>